[gd_scene load_steps=17 format=3 uid="uid://cp4qrf3xnn1j5"]

[ext_resource type="Script" path="res://Scripts/battle.gd" id="1_qg4wn"]
[ext_resource type="FontFile" uid="uid://i1kmf0x2e50f" path="res://Assets/UI/Fonts/NormalFont.ttf" id="1_v8c87"]
[ext_resource type="Resource" uid="uid://c5qnbkkjbav0c" path="res://src/Enemies/Bamboo.tres" id="2_ft17e"]
[ext_resource type="Texture2D" uid="uid://cyjm0li5qj1pe" path="res://Assets/Enemies/Bamboo Enemy/Faceset.png" id="2_w8lro"]
[ext_resource type="Texture2D" uid="uid://xakdeeofevw1" path="res://Assets/UI/DialogueBoxSimple.png" id="3_wtycf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vk606"]
bg_color = Color(0.690196, 0.392157, 0.32549, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
border_blend = true
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pxqs5"]
bg_color = Color(0.709804, 0.121569, 0.235294, 1)
border_width_left = 2
border_width_top = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
border_blend = true
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5bvu5"]
bg_color = Color(0.0313726, 0.0470588, 0.0470588, 0.631373)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7wou6"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_blend = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8d22d"]
bg_color = Color(0.160784, 0.160784, 0.160784, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_blend = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eyco6"]
bg_color = Color(0.184314, 0.247059, 0.356863, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_blend = true

[sub_resource type="Animation" id="Animation_kwob7"]
resource_name = "EnemyDamaged"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VBoxContainer/EnemyTexture:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_0em5o"]
resource_name = "EnemyDeath"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VBoxContainer/EnemyTexture:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_516gl"]
resource_name = "PlayerDamaged"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect2:color")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 0.529412), Color(0, 0, 0, 0), Color(0, 0, 0, 0.529412), Color(0, 0, 0, 0), Color(0, 0, 0, 0.529412), Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_62kw1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VBoxContainer/EnemyTexture:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect2:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_o7jxi"]
_data = {
"EnemyDamaged": SubResource("Animation_kwob7"),
"EnemyDeath": SubResource("Animation_0em5o"),
"PlayerDamaged": SubResource("Animation_516gl"),
"RESET": SubResource("Animation_62kw1")
}

[node name="Battle" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qg4wn")
enemy = ExtResource("2_ft17e")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0784314, 0.105882, 0.105882, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -114.5
offset_right = 100.0
offset_bottom = 114.5
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="HealthBar" type="ProgressBar" parent="VBoxContainer"]
custom_minimum_size = Vector2(200, 25)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_vk606")
theme_override_styles/fill = SubResource("StyleBoxFlat_pxqs5")
value = 25.0
show_percentage = false

[node name="Label" type="Label" parent="VBoxContainer/HealthBar"]
layout_mode = 1
anchors_preset = -1
offset_left = 10.0
offset_right = 40.0
offset_bottom = 23.0
theme_override_fonts/font = ExtResource("1_v8c87")
text = "HP:10/20"
horizontal_alignment = 1

[node name="EnemyTexture" type="TextureRect" parent="VBoxContainer"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
texture = ExtResource("2_w8lro")

[node name="ColorRect2" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0)

[node name="PlayerPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = -150.0
offset_right = 1.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_5bvu5")

[node name="HBoxContainer" type="HBoxContainer" parent="PlayerPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -468.0
offset_top = -25.0
offset_right = 469.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="PlayerPanel/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_v8c87")
theme_override_font_sizes/font_size = 20
text = "Player"

[node name="HealthBar" type="ProgressBar" parent="PlayerPanel/HBoxContainer"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/background = SubResource("StyleBoxFlat_vk606")
theme_override_styles/fill = SubResource("StyleBoxFlat_pxqs5")
value = 25.0
show_percentage = false

[node name="Label" type="Label" parent="PlayerPanel/HBoxContainer/HealthBar"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.071
anchor_top = 0.475
anchor_right = 0.071
anchor_bottom = 0.5
offset_top = -11.5
offset_right = 84.0
offset_bottom = 11.5
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_v8c87")
text = "HP:10/20"
horizontal_alignment = 1

[node name="PlayerActions" type="Control" parent="PlayerPanel"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Attack" type="Button" parent="PlayerPanel/PlayerActions"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
offset_left = 406.0
offset_top = 50.0
offset_right = 612.0
offset_bottom = 100.0
size_flags_horizontal = 3
size_flags_vertical = 4
focus_mode = 0
theme_override_fonts/font = ExtResource("1_v8c87")
theme_override_styles/normal = SubResource("StyleBoxFlat_7wou6")
theme_override_styles/hover = SubResource("StyleBoxFlat_8d22d")
theme_override_styles/pressed = SubResource("StyleBoxFlat_eyco6")
text = "Attack"

[node name="Defend" type="Button" parent="PlayerPanel/PlayerActions"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
offset_left = 622.0
offset_top = 50.0
offset_right = 828.0
offset_bottom = 100.0
size_flags_horizontal = 3
size_flags_vertical = 5
focus_mode = 0
theme_override_fonts/font = ExtResource("1_v8c87")
theme_override_styles/normal = SubResource("StyleBoxFlat_7wou6")
theme_override_styles/hover = SubResource("StyleBoxFlat_8d22d")
theme_override_styles/pressed = SubResource("StyleBoxFlat_eyco6")
text = "Defend"

[node name="Run" type="Button" parent="PlayerPanel/PlayerActions"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
offset_left = 838.0
offset_top = 50.0
offset_right = 1045.0
offset_bottom = 100.0
size_flags_horizontal = 3
size_flags_vertical = 5
focus_mode = 0
theme_override_fonts/font = ExtResource("1_v8c87")
theme_override_styles/normal = SubResource("StyleBoxFlat_7wou6")
theme_override_styles/hover = SubResource("StyleBoxFlat_8d22d")
theme_override_styles/pressed = SubResource("StyleBoxFlat_eyco6")
text = "Run"

[node name="TextBox" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.01
anchor_right = 0.5
anchor_bottom = 0.1
offset_left = -316.0
offset_top = 20.0
offset_right = 316.0
offset_bottom = 120.0
grow_horizontal = 2
texture = ExtResource("3_wtycf")

[node name="Text" type="Label" parent="TextBox"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.5
anchor_right = 0.05
anchor_bottom = 0.5
offset_top = -11.5
offset_right = 159.0
offset_bottom = 11.5
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_v8c87")
theme_override_font_sizes/font_size = 20
text = "Text Box!"

[node name="Thicker" type="Label" parent="TextBox"]
layout_mode = 0
offset_left = 593.0
offset_top = 116.52
offset_right = 633.0
offset_bottom = 139.52
text = "->"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_o7jxi")
}

[connection signal="pressed" from="PlayerPanel/PlayerActions/Attack" to="." method="_on_attack_pressed"]
[connection signal="pressed" from="PlayerPanel/PlayerActions/Defend" to="." method="_on_defend_pressed"]
[connection signal="pressed" from="PlayerPanel/PlayerActions/Run" to="." method="_on_run_pressed"]
